[package]
name = "blog_os"
version = "0.1.0"
authors = ["Roshan Giyanani <roshangiyanani@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.6"
lazy_static = { version = "1.3.0", features = ["spin_no_std"] }
spin = "0.5.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
